--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./about-us.html" />
     <link rel="stylesheet" href="./blog.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NAPAAK AUTOWORKS</title>
+    <title>AIEB AUTOHUB</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -36,7 +36,7 @@
           aria-label="Offcanvas navbar large"
         >
           <div class="container">
-            <a class="navbar-brand" href="#">NAPAAK AUTOWORKS</a>
+            <a class="navbar-brand" href="#">AIEB AUTOHUB</a>
             <button
               class="navbar-toggler"
               type="button"
